@@ -149,18 +149,20 @@ echo "<title>" . $config["sitename"] . "</title>";
 <link rel="stylesheet" href="include/styles/integria.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/integria_tip.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/flora/flora.accordion.css" type="text/css" />
-<link rel="stylesheet" href="include/styles/flora/flora.all.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/flora/flora.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/flora/flora.datepicker.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/flora/flora.dialog.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/flora/flora.resizable.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/flora/flora.slider.css" type="text/css" />
 <link rel="stylesheet" href="include/styles/flora/flora.tabs.css" type="text/css" />
+<link rel="stylesheet" href="include/styles/flora/flora.core.css" type="text/css" />
+<link rel="stylesheet" href="include/styles/flora/flora.theme.css" type="text/css" />
 <script type="text/javascript" src="include/js/calendar.js"></script>
 <script type="text/javascript" src="include/js/integria.js"></script>
 <script type="text/javascript" src="include/js/jquery.js"></script>
 <script type="text/javascript" src="include/js/jquery-migrate-1.2.1.js"></script><!-- MIGRATE OLDER JQUERY CODE (TEMPORAL)-->
 <script type="text/javascript" src="include/js/jquery.ui.core.js"></script>
+<script type="text/javascript" src="include/js/jquery.ui.widget.js"></script>
 <script type="text/javascript" src="include/js/jquery.ui.tabs.js"></script>
 <script type="text/javascript" src="include/js/jquery.ui.draggable.js"></script>
 <script type="text/javascript" src="include/js/jquery.ui.resizable.js"></script>
@@ -168,6 +170,8 @@ echo "<title>" . $config["sitename"] . "</title>";
 <script type="text/javascript" src="include/js/jquery.form.js"></script>
 <script type="text/javascript" src="include/js/jquery.ui.textarearesizer.js"></script>
 <script type="text/javascript" src="include/js/jquery.axuploader.js"></script>
+<script type="text/javascript" src="include/js/jquery-ui.js"></script>
+<script type="text/javascript" src="include/js/jquery.ui.position.js"></script>
 <script type="text/javascript">
 </script>
 <!--[if lte IE 7]>
